Prevent breaks at hyphenated words

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,10 @@ body {
   /*background: #2c2c2c !important;*/
 }
 
+.nowrap {
+  white-space: nowrap;
+}
+
 .anchors {
   display: block;
   position: relative;
